WIP: - Upgrade jenkins to 2.479.1 - Upgrade ldap plugin to 733.vd3700c27b_043 - Upgrade envinject plugin to 2.919.v009a_a_1067cd0 - Upgrade java to version 17 (required by jenkins) and add required `--add-opens` for envinject